export enum Role {
  Guerrero = 'guerrero',
  Admin = 'admin',
}
